--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/import-data.mjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.68.3",
+    "@sanity/vision": "^3.70.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.16",
-    "next-sanity": "^9.8.32",
+    "next-sanity": "^9.8.38",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "sanity": "^3.68.3",
+    "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
     "sweetalert2": "^11.15.10"
   },
